# BASIC_CHAT_BOT

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
config/: config.py  pi_agent_config.yml
pi_agent_core/: app.py  models.py
pi_agent_core/application/: chat_service.py  query_engine_creator_service.py
pi_agent_core/helpers/: utils.py
pi_agent_core/index_generation/: index_generation_process.py  transformation_logic.py  vector_store_logic.py
pi_agent_core/index_generation/storage/chroma_collection/: chroma.sqlite3
pi_agent_core/index_generation/storage/transformed_data/: llama_index_chunked_documents.joblib  llama_index_documents.joblib
pi_agent_core/index_generation/storage/vector_store/: index_store.json
pi_agent_core/index_generation/transformations/: ParagraphChunking.py
pi_agent_core/infraestructure/: ai_service.py  index_managment.py
pi_agent_core/routers/: agent.py
